--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -220,3 +220,9 @@
  		padding-top: 0px;
  	}
  }
+
+ @media only screen and (max-width: 600px) {
+	.jumbotron{
+		height: 350vh;
+	}
+}
